--- a/Glossary.html
+++ b/Glossary.html
@@ -1,60 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Team Gold</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
 
-  <body>
-    <div class = "header" >
-      <h1>Productive Places: Team Gold</h1>
-    
-      <nav class = "topnav">
-        <a  class="button" href="/ProductivePlaces/index.html">
+<head>
+  <meta charset="UTF-8">
+  <title>Team Gold</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <div class="body-card">
+    <h3>Glossary</h3>
+  </div>
+  <br>
+  <div class="header">
+    <br>
+
+    <nav class="topnav">
+      <a class="button" href="/ProductivePlaces/index.html">
         Home
-        </a>
-        <a  class="button" href="/ProductivePlaces/Problem.html">
-          Problem
-        </a>
-        <a class="button" href="/ProductivePlaces/presentations.html">
-          Presentations
-        </a>     
-        <a class="button" href="/ProductivePlaces/teambio.html">
-          Team Bios
-        </a>
-        <a class="button" href="/ProductivePlaces/Glossary.html">
-          Glossary
-        </a>
-        <a class="button" href="/ProductivePlaces/references.html">
-          References
-        </a>
-      </nav>
-      <br>
-     </div>
+      </a>
+      <a class="button" href="/ProductivePlaces/Problem.html">
+        Problem
+      </a>
+      <a class="button" href="/ProductivePlaces/presentations.html">
+        Presentations
+      </a>
+      <a class="button" href="/ProductivePlaces/labs.html">
+        Labs
+      </a>
+      <a class="button" href="/ProductivePlaces/Glossary.html">
+        Glossary
+      </a>
+      <a class="button" href="/ProductivePlaces/references.html">
+        References
+      </a>
+      <a class="button" href="/ProductivePlaces/teambio.html">
+        Team Gold
+      </a>
+    </nav>
+    <br>
+  </div>
 
-     <br>
-
-     <div class ="body-card">
-      <h2>Glossary</h2>
+  <div class="main">
+    <div class="body-card">
       <ol>
-        <li><b>API (Application Programming Interface):</b> A set of rules that allows two software applications to communicate with each other and exchange data. </li><br>
-        <li><b>Body doubling effect:</b> When a person is more motivated to be productive in the presence of others, rather than alone at home. </li><br>
+        <li><b>API (Application Programming Interface):</b> A set of rules that allows two software applications to
+          communicate with each other and exchange data. </li><br>
+        <li><b>Body doubling effect:</b> When a person is more motivated to be productive in the presence of others,
+          rather than alone at home. </li><br>
         <li><b>Git:</b> Version Control</li><br>
-        <li><b>Integrated Development Environment(IDE):</b> Software application that provides facilities for software development.</li><br>
+        <li><b>Integrated Development Environment(IDE):</b> Software application that provides facilities for software
+          development.</li><br>
         <li><b>User Interface (UI):</b> Visual elements of a software product.</li><br>
         <li><b>User Experience (UX):</b> Overall experience and interaction a user has with a product.</li><br>
       </ol>
     </div>
+  </div>
+  <br>
 
-<br>
+  <div class="footer">
 
-    <div class = "footer">
+    <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
+    |
+    <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
 
-          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
-            |
-          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
+  </div>
+</body>
 
-    </div>
-  </body>
 </html>
