--- a/Problem.html
+++ b/Problem.html
@@ -1,46 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Team Gold</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
 
-  <body>
-    <div class = "header" >
-      <h1>Productive Places: Team Gold</h1>
-    
-      <nav class = "topnav">
-        <a  class="button" href="/ProductivePlaces/index.html">
+<head>
+  <meta charset="UTF-8">
+  <title>Team Gold</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <div class="body-card">
+    <h3>The Problem</h3>
+  </div>
+
+  <br>
+  <div class="header">
+    <br>
+
+    <nav class="topnav">
+      <a class="button" href="/ProductivePlaces/index.html">
         Home
-        </a>
-        <a  class="button" href="/ProductivePlaces/Problem.html">
-          Problem
-        </a>
-        <a class="button" href="/ProductivePlaces/presentations.html">
-          Presentations
-        </a>     
-        <a class="button" href="/ProductivePlaces/teambio.html">
-          Team Bios
-        </a>
-        <a class="button" href="/ProductivePlaces/Glossary.html">
-          Glossary
-        </a>
-        <a class="button" href="/ProductivePlaces/references.html">
-          References
-        </a>
-      </nav>
-      <br>
-     </div>
+      </a>
+      <a class="button" href="/ProductivePlaces/Problem.html">
+        Problem
+      </a>
+      <a class="button" href="/ProductivePlaces/presentations.html">
+        Presentations
+      </a>
+      <a class="button" href="/ProductivePlaces/labs.html">
+        Labs
+      </a>
+      <a class="button" href="/ProductivePlaces/Glossary.html">
+        Glossary
+      </a>
+      <a class="button" href="/ProductivePlaces/references.html">
+        References
+      </a>
+      <a class="button" href="/ProductivePlaces/teambio.html">
+        Team Gold
+      </a>
+    </nav>
+    <br>
+  </div>
 
-<br>
 
+  <div class="main">
     <div class="body-card">
-    <h2>The Problem</h2>
-      <p>Many students struggle to concentrate on studying and completing schoolwork at home for various reasons, resulting in a need for finding alternate locations to be productive. Students seeking study locations that remain open during the evenings will gain the most advantages, as many places close early, and don’t accommodate for late hours. Our team proposes a web application that returns to the user a list of places open for studying, collaborating, to address the problem. </p>
+      <p>
+        Many students struggle to concentrate on studying and completing schoolwork at home for various reasons,
+        resulting in a need for finding alternate locations to be productive. Students seeking study locations that
+        remain open during the evenings will gain the most advantages, as many places close early, and don’t
+        accommodate
+        for late hours. Our team proposes a web application that returns to the user a list of places open for
+        studying,
+        collaborating, to address the problem.
+
+      </p>
     </div>
 
-<br>
+    <br>
 
     <!--
       Placeholder for Problem Characteristics
@@ -50,15 +68,16 @@
       <p> Characteristics Placeholder </p>
     </div>
     -->
-    <br>
-      <div class = "footer">
 
-          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
-            |
-          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
+    <div class="footer">
 
-      </div>
+      <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
+      |
+      <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
 
+    </div>
 
-  </body>
+  </div>
+</body>
+
 </html>
