--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Team Gold</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <div class="header">
-      <h1>Productive Places: Team Gold</h1>
+<head>
+  <meta charset="UTF-8" />
+  <title>Team Gold</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-      <nav class="topnav">
-        <a class="button" href="/ProductivePlaces/index.html"> Home </a>
-        <a class="button" href="/ProductivePlaces/Problem.html"> Problem </a>
-        <a class="button" href="/ProductivePlaces/presentations.html">
-          Presentations
-        </a>
-        <a class="button" href="/ProductivePlaces/teambio.html"> Team Bios </a>
-        <a class="button" href="/ProductivePlaces/Glossary.html"> Glossary </a>
-        <a class="button" href="/ProductivePlaces/references.html">
-          References
-        </a>
-      </nav>
-      <br />
-    </div>
-    <img
-      style="display: block; margin: auto"
-      src="images\Gold_Ore_JE3_BE2.png"
-      alt="Homepage Image"
-    />
-    <br />
-    <div class="footer">
-      <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
-      |
-      <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
-    </div>
-  </body>
+<body>
+  <div class="banner">
+    <img src= "\images\home.png" alt ="Home banner" class = "banner-img">
+  </div>
+  <br>
+  <div class="header">
+    <br>
+    <nav class="topnav">
+      <a class="button" href="/ProductivePlaces/index.html">
+        Home
+      </a>
+      <a class="button" href="/ProductivePlaces/Problem.html">
+        Problem
+      </a>
+      <a class="button" href="/ProductivePlaces/presentations.html">
+        Presentations
+      </a>
+      <a class="button" href="/ProductivePlaces/labs.html">
+        Labs
+      </a>
+      <a class="button" href="/ProductivePlaces/Glossary.html">
+        Glossary
+      </a>
+      <a class="button" href="/ProductivePlaces/references.html">
+        References
+      </a>
+      <a class="button" href="/ProductivePlaces/teambio.html">
+        Team Gold
+      </a>
+    </nav>
+    <br>
+  </div>
+  <br />
+  <div class="footer">
+    <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
+    |
+    <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
+  </div>
+</body>
+
 </html>
