--- a/teambio.html
+++ b/teambio.html
@@ -1,113 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Team Gold</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
 
-  <body>
-    <div class = "header" >
-      <h1>Productive Places: Team Gold</h1>
-    
-      <nav class = "topnav">
-        <a  class="button" href="/ProductivePlaces/index.html">
+<head>
+  <meta charset="UTF-8">
+  <title>Team Gold</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <div class="body-card">
+    <h3>About us</h3>
+  </div>
+  <br>
+  <div class="header">
+    <br>
+
+    <nav class="topnav">
+      <a class="button" href="/ProductivePlaces/index.html">
         Home
-        </a>
-        <a  class="button" href="/ProductivePlaces/Problem.html">
-          Problem
-        </a>
-        <a class="button" href="/ProductivePlaces/presentations.html">
-          Presentations
-        </a>     
-        <a class="button" href="/ProductivePlaces/teambio.html">
-          Team Bios
-        </a>
-        <a class="button" href="/ProductivePlaces/Glossary.html">
-          Glossary
-        </a>
-        <a class="button" href="/ProductivePlaces/references.html">
-          References
-        </a>
-      </nav>
-      <br>
-     </div>
+      </a>
+      <a class="button" href="/ProductivePlaces/Problem.html">
+        Problem
+      </a>
+      <a class="button" href="/ProductivePlaces/presentations.html">
+        Presentations
+      </a>
+      <a class="button" href="/ProductivePlaces/labs.html">
+        Labs
+      </a>
+      <a class="button" href="/ProductivePlaces/Glossary.html">
+        Glossary
+      </a>
+      <a class="button" href="/ProductivePlaces/references.html">
+        References
+      </a>
+      <a class="button" href="/ProductivePlaces/teambio.html">
+        Team Gold
+      </a>
+    </nav>
+    <br>
+  </div>
 
 
+
+  <div class="main">
     <div class="bio-row">
       <div class="bio-card">
         <h2>Chanze McDowell</h2>
         <img src="images\Chanze.png" alt="Chanze McDowell portrait">
-        <p>Chanze McDowell is in his senior year at Old Dominion University. He will 
-          graduate with a bachelor's degree in Computer Science and a minor in 
-          Cybersecurity. He currently lives in Nathalie, Virginia, and is an online 
-          student. Chanze has been an IT Support Analyst - Intern at BWXT for the last 
+        <p>Chanze McDowell is in his senior year at Old Dominion University. He will
+          graduate with a bachelor's degree in Computer Science and a minor in
+          Cybersecurity. He currently lives in Nathalie, Virginia, and is an online
+          student. Chanze has been an IT Support Analyst - Intern at BWXT for the last
           month. When he is not working or studying, he enjoys many outdoor activities.</p>
       </div>
       <div class="bio-card">
-      <h2>Christian Mirt</h2>
-      <img src="images\Christian.png" alt="Christian Mirt portrait">
-      <p>Christian Mirt is a senior at Old Dominion University.  He will graduate with 
-        a bachelor’s degree in Computer Science and a minor in Actuarial Mathematics.  
-        He is currently an Engineering Intern at Antech Systems.  When he is not 
-        working or studying, he enjoys surfing.</p>
+        <h2>Christian Mirt</h2>
+        <img src="images\Christian.png" alt="Christian Mirt portrait">
+        <p>Christian Mirt is a senior at Old Dominion University. He will graduate with
+          a bachelor’s degree in Computer Science and a minor in Actuarial Mathematics.
+          He is currently an Engineering Intern at Antech Systems. When he is not
+          working or studying, he enjoys surfing.</p>
       </div>
       <div class="bio-card">
-      <h2>Denise Dela Cruz</h2>
-      <img src="images\Denise.png" alt="Denise Dela Cruz portrait">
-      <p>Denise Dela Cruz is a senior at Old Dominion University majoring in Computer 
-        Science and minoring in Cybersecurity. Originally from Washington state, 
-        she now lives in Virginia Beach. She has been working as a Medical 
-        Laboratory Technician at Sentara Norfolk General's Reference Lab and Immunology 
-        Lab for 11 years, while serving in the Army Reserves for 6 of those years. 
-        In her free time, she enjoys finding new restaurants and attending concerts.</p>
+        <h2>Denise Dela Cruz</h2>
+        <img src="images\Denise.jpg" alt="Denise Dela Cruz portrait">
+        <p>Denise Dela Cruz is a senior at Old Dominion University majoring in Computer
+          Science and minoring in Cybersecurity. Originally from Washington state,
+          she now lives in Virginia Beach. She has been working as a Medical
+          Laboratory Technician at Sentara Norfolk General's Reference Lab and Immunology
+          Lab for 11 years, while serving in the Army Reserves for 6 of those years.
+          In her free time, she enjoys finding new restaurants and attending concerts.</p>
       </div>
       <div class="bio-card">
-      <h2>Jake Carosi</h2>
-      <img src="images\Jake.jpg" alt="Jake Carosi portrait">
-      <p>Jake Carosi Primes is in his senior year at Old Dominion University. He Will 
-        graduate with a bachelor's degree in Computer Science and a minor in Cybersecurity. 
-        He currently lives in Newport News, Virginia, and commutes to campus. Jake has been 
-        working part-time at Advance Auto Parts for the last year and a half. When he is not 
-        working or studying, he plays Ultimate Frisbee and enjoys the occasional video game.</p>
+        <h2>Jake Carosi</h2>
+        <img src="images\Jake.jpg" alt="Jake Carosi portrait">
+        <p>Jake Carosi Primes is in his senior year at Old Dominion University. He Will
+          graduate with a bachelor's degree in Computer Science and a minor in Cybersecurity.
+          He currently lives in Newport News, Virginia, and commutes to campus. Jake has been
+          working part-time at Advance Auto Parts for the last year and a half. When he is not
+          working or studying, he plays Ultimate Frisbee and enjoys the occasional video game.</p>
       </div>
     </div>
     <div class="bio-row">
       <div class="bio-cardspacer"></div>
       <div class="bio-card">
-      <h2>Kayla Tucker</h2>
-      <img src="images\Kayla.jpg" alt="Kayla Tucker portrait">
-      <p>Kayla is a senior at Old Dominion University. She will graduate with a bachelor's 
-        degree in Computer Science and plans to get a Master's in Data Science & Analytics. 
-        She currently lives in Norfolk, Virginia, and commutes to campus. Kayla works 
-        part-time for Old Dominion University's Recreation & Wellness Department. She 
-        enjoys playing cozy video games and watching professional wrestling in her spare time.</p>
+        <h2>Kayla Tucker</h2>
+        <img src="images\Kayla.jpg" alt="Kayla Tucker portrait">
+        <p>Kayla is a senior at Old Dominion University. She will graduate with a bachelor's
+          degree in Computer Science and plans to get a Master's in Data Science & Analytics.
+          She currently lives in Norfolk, Virginia, and commutes to campus. Kayla works
+          part-time for Old Dominion University's Recreation & Wellness Department. She
+          enjoys playing cozy video games and watching professional wrestling in her spare time.</p>
       </div>
       <div class="bio-card">
-      <h2>Michael Evans</h2>
-      <img src="images\Michael.jpg" alt="Michael Evans portrait">
-      <p>Michael Evans is a senior Computer science Student and research assistant in the 
-        ODU Vision Lab. After graduation, he will be pursuing a Ph.D. in Computer Science 
-        and is interested in autonomous systems, and integrated task and motion planning 
-        in robotics. Outside of research, he enjoys playing piano and drinking coffee.</p>
+        <h2>Michael Evans</h2>
+        <img src="images\Michael.jpg" alt="Michael Evans portrait">
+        <p>Michael Evans is a senior Computer science Student and research assistant in the
+          ODU Vision Lab. After graduation, he will be pursuing a Ph.D. in Computer Science
+          and is interested in autonomous systems, and integrated task and motion planning
+          in robotics. Outside of research, he enjoys playing piano and drinking coffee.</p>
       </div>
       <div class="bio-card">
-      <h2>Yomna Elmousalami</h2>
-      <img src="images\Yomna.jpg" alt="Yomna Elmousalami portrait">
-      <p>Yomna Elmousalami is a senior at Old Dominion University studying computer science. 
-        After graduating, she is interested in pursuing graduate studies and receiving 
-        a Masters in Computer Science.</p>
+        <h2>Yomna Elmousalami</h2>
+        <img src="images\Yomna.jpg" alt="Yomna Elmousalami portrait">
+        <p>Yomna Elmousalami is a senior at Old Dominion University studying computer science.
+          After graduating, she is interested in pursuing graduate studies and receiving
+          a Masters in Computer Science.</p>
       </div>
       <div class="bio-cardspacer"></div>
     </div>
+  </div>
 
-    <br>
-      <div class = "footer">
+  <br>
+  <div class="footer">
 
-          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
-            |
-          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
+    <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
+    |
+    <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
 
-      </div>
-  </body>
+  </div>
+</body>
+
 </html>
